test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/void_array_in_cast.plx
pub fn main(none) i32 {
    cast<*[3]any>(4) #  the element type in an array declarator must be complete
    return 0
}
